<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/WidgetPreviewAction"
            android:text="@string/income" />

        <TextView
            style="@style/WidgetPreviewAction"
            android:text="@string/expense" />

        <TextView
            style="@style/WidgetPreviewAction"
            android:text="@string/transfer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/WidgetPreviewAction"
            android:text="@string/borrow" />

        <TextView
            style="@style/WidgetPreviewAction"
            android:text="@string/lend" />
    </LinearLayout>
</LinearLayout>
